Finalizado la cabecera, con el css incluido

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blogpost</title>
-    <link rel="stylesheet" href="./estilos/styles.css">
-</head>
-<body>
-    <h1>Esto es un Blogpost</h1>
-    <p>Esta vendria a ser la informacion de mi blogpost</p>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Blogpost</title>
+        <link rel="stylesheet" href="./estilos/styles.css">
+    </head>
+    <body>
+        <div id="container" >
+            <div id="cabecera">
+                Hyperblog
+                <span id="tagline">Un blog de confianza</span>
+            </div>
+            <div id="post">
+                <h1>Este es el titulo del post, bastante atractivo</h1>
+                <p>Y este es el parrafo donde explicare el uso de las ramas</p>
+            </div>
+        </div>
+    </body>
 </html>
