Agregue contenido adicional y puse una nueva fuentes

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Esto es un blogpost</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-    <h1>Esto es el inicio de un blogpost</h1>
-    <p>Aqui tendria que ir el texto jijijaja</p>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Esto es un blogpost</title>
+        <link rel="stylesheet" href="css/style.css">
+    </head>
+    <body>
+        <div id="conteiner">
+            <div id="post">
+                <h1>Esto es el inicio de un blogpost</h1>
+                <p>Aqui tendria que ir el texto jijijaja</p>
+                <p>Estoy realizando este blog debio a que estoy empezando a usar git y quiero unificar todas mis ramas
+                    para poder ser mejor como programador, ya que git es algo indispensable y muy importante!!!
+                </p>
+            </div>              
+        </div>
+    </body>
 </html>
