Ahora hubo mejoras en el CSS ya que estaba mal hecho y con errores

--- a/blogpost.html
+++ b/blogpost.html
@@ -18,5 +18,8 @@
                 <p>Y este es el parrafo donde explicare el uso de las ramas</p>
             </div>
         </div>
+        <div>
+            <p>Hola soy un parrafo en una caja</p>
+        </div>
     </body>
 </html>
