Hice cambios en la cebecera y en el parrafo

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
         <div id="container" >
             <div id="cabecera">
                 Hyperblog
-                <span id="tagline">Un blog de confianza</span>
+                <span id="tagline">Un blog Maestro</span>
             </div>
             <div id="post">
                 <h1>Este es el titulo del post, bastante atractivo</h1>
@@ -19,7 +19,10 @@
             </div>
         </div>
         <div>
-            <p>Hola soy un parrafo en una caja</p>
+            <p>Hola soy un parrafo en una caja, ayuda, estoy atrapado en ella.</p>
+        </div>
+        <div>
+            <p>Sigueme en todas mis redes sociales ;)</p>
         </div>
     </body>
 </html>
