Pido ayuda para sacar a el parrafo de la caja y solicito que me sigan en tuiter

--- a/blogpost.html
+++ b/blogpost.html
@@ -20,6 +20,8 @@
         </div>
         <div>
             <p>Hola soy un parrafo en una caja</p>
+            <p>Porfavor ayudame a salir de esta caja.</p>
+            <p>Si me sigues en twiter podre salir :)</p>
         </div>
     </body>
 </html>
