Deje mi arroba para que me sigan en twitter

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
         <div id="container" >
             <div id="cabecera">
                 Hyperblog
-                <span id="tagline">Bienvenido a mi blog, hoy hablare de Git y GitHub</span>
+                <span id="tagline">Bienvenido a mi blog, hoy hablare de Git y GitHub y su importancia</span>
             </div>
             <div id="post">
                 <h1>Este es el titulo del post, bastante atractivo</h1>
@@ -22,6 +22,7 @@
             <p>Hola soy un parrafo en una caja</p>
             <p>Porfavor ayudame a salir de esta caja.</p>
             <p>Si me sigues en twiter podre salir :)</p>
+            <p>Estoy como @nicoelingeniero</p>
         </div>
     </body>
 </html>
